--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "## 2. Loading data with Pandas\n",
     "\n",
-    "We need to load `client_data.csv` and `price_data.csv` into individual dataframes so that we can work with them in Python"
+    "We need to load the 2 datasets into individual dataframes so that we can work with them in Python"
    ]
   },
   {
